# asterline

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ecosystem-submission.yml
.github/workflows/: check.yml  release.yml
docs/: Makefile  concepts.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
examples/group-assistant-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/group-assistant-runtime/.asterline/: state.json
examples/group-assistant-runtime/src/group_assistant_runtime/plugins/: assistant.py  room.py
examples/persona-rp-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/persona-rp-runtime/.asterline/: state.json
examples/persona-rp-runtime/src/persona_rp_runtime/plugins/: lounge.py  persona.py
examples/planner-executor-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/planner-executor-runtime/src/planner_executor_runtime/plugins/: executor.py  planner.py  session.py
examples/supervisor-team-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/supervisor-team-runtime/src/supervisor_team_runtime/plugins/: briefing.py  supervisor.py  workers.py
scripts/: check_example_configs.sh  typecheck.sh  validate_ecosystem_store.py
src/: lib.rs
tests/: test_adapter_conformance.py  test_adapter_middleware.py  test_agent_tools.py  test_docs_content.py  test_docs_extensions.py  test_docs_i18n_versions.py  test_echo_runtime_management.py  test_ecosystem_store.py  test_logging_config.py  test_management_api.py  test_package_discovery.py  test_rules_engine.py  test_runtime_introspection.py  test_runtime_safety.py  test_telegram_adapter.py
(+152 files in other folders)
