[package]
name = "asterline-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust core for the Asterline runtime framework."

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
