[project]
name = "group-assistant-runtime"
version = "0.1.0"
description = "Group assistant Asterline example."
requires-python = ">=3.10"
dependencies = [
    "asterline",
    "asterline-example-utils",
]

[tool.uv.sources]
asterline = { workspace = true }
asterline-example-utils = { workspace = true }
