[project]
name = "planner-executor-runtime"
version = "0.1.0"
description = "Planner / executor Asterline example."
requires-python = ">=3.10"
dependencies = [
    "asterline",
    "asterline-example-utils",
]

[tool.uv.sources]
asterline = { workspace = true }
asterline-example-utils = { workspace = true }
